--- a/index.html
+++ b/index.html
@@ -55,10 +55,9 @@
       </nav><!-- .navbar -->
 
       <div class="social-links">
-        <a href="#" class="twitter"><i class="bi bi-twitter"></i></a>
-        <a href="#" class="facebook"><i class="bi bi-facebook"></i></a>
-        <a href="#" class="instagram"><i class="bi bi-instagram"></i></a>
-        <a href="#" class="linkedin"><i class="bi bi-linkedin"></i></a>
+        <a href="https://github.com/Sanoy24/" class="twitter"><i class="bi bi-github"></i></a>
+              <a href="https://www.instagram.com/s_a__n_o_y/" class="instagram"><i class="bi bi-instagram"></i></a>
+              <a href="https://www.linkedin.com/in/yonas-mekonnen-43682a261/" class="linkedin"><i class="bi bi-linkedin"></i></a>
       </div>
 
     </div>
